<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mostrarPalabra"
        android:title="@string/mostrarpalabra" />

    <item
        android:id="@+id/listaPalabras"
        android:title="@string/lista_de_palabras" />
    <item
        android:id="@+id/Guardar_Cargar"
        android:title="@string/guardar_cargar">

        <menu>
            <item
                android:id="@+id/exportar"
                android:title="@string/guardar_partida" />
            <item
                android:id="@+id/importar"
                android:title="@string/cargar_partida_guardada" />
        </menu>
    </item>

    <item
        android:id="@+id/Guardar_Cargar_SQLlite"
        android:title="@string/guardar_cargar_SQL">

        <menu>
            <item
                android:id="@+id/exportarSQL"
                android:title="@string/guardar_partida" />
            <item
                android:id="@+id/importarSQL"
                android:title="@string/cargar_partida_guardada" />
        </menu>


    </item>

    <item
        android:id="@+id/salir"
        android:title="@string/salir" />
</menu>